# lib/api-spec/openapi.yaml
@@ -1821,6 +1821,8 @@ components:
           type: integer
         iPrayed:
           type: boolean
+        nextPrayAt:
+          type: ["string", "null"]
         createdAt:
           type: string
         updatedAt:
@@ -1839,6 +1841,7 @@ components:
         - iCommitted
         - prayedCount
         - iPrayed
+        - nextPrayAt
         - createdAt
         - updatedAt
 
@@ -1913,6 +1916,8 @@ components:
           type: integer
         iPrayed:
           type: boolean
+        nextPrayAt:
+          type: ["string", "null"]
         updates:
           type: array
           items:
@@ -1938,6 +1943,7 @@ components:
         - iCommitted
         - prayedCount
         - iPrayed
+        - nextPrayAt
         - updates
         - createdAt
         - updatedAt
@@ -1949,9 +1955,12 @@ components:
           type: integer
         iPrayed:
           type: boolean
+        nextPrayAt:
+          type: ["string", "null"]
       required:
         - prayedCount
         - iPrayed
+        - nextPrayAt
 
     PrayerRequestInput:
       type: object
